fixed ui overlap form

--- a/accounts/static/login.css
+++ b/accounts/static/login.css
@@ -28,3 +28,7 @@ nav{
 .nav-item:hover{
     border: 2px solid white;
 }
+@media (min-width: 400px) {
+    .container {
+      width: 400px;
+    }
